[package]
name = "cheesecake_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14"
uart_16550 = "0.2"
spin = "0.9"
linked_list_allocator = "0.10"
bootloader_api = "0.11.15"
noto-sans-mono-bitmap = { version = "0.3.2", features = ["size_16"] }

[[bin]]
name = "cheesecake_kernel"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
